--- a/cafeteria.html
+++ b/cafeteria.html
@@ -24,6 +24,10 @@
                     <img/>
                     <p>Noticia 2</p>
                 </article>
+                <article>
+                    <img/>
+                    <p>Noticia 3</p>
+                </article>
             </aside>
         </main>
         <footer>
