--- a/contacto.html
+++ b/contacto.html
@@ -5,36 +5,55 @@
     </head>
     <body>
         <header>
-            Header
+            <img src="img/logo.png" width="150" height="150">
         </header>
         <nav>
-            Navegacion
+            <div><a href="cafeteria.html">Cafetería</a></div>
+            <div><a href="panaderia.html">Panadería</a></div>
+            <div><a href="panaderia.html">Bollería</a></div>
+            <div><a href="panaderia.html">Empanadas</a></div>
+            <div><a href="contacto.html">Contacto</a></div>
         </nav>
         <main>
             <section>
-                Información de contacto
+                <h3>Información de contacto</h3>
+                <p>Email: info@migasamigas.com</p>
+                <p>Tlf: 123456789</p>
+                <p>Calle de Madrid, 13</p>
+                <p>Fontiñas</p>
+                <p>15707 Santiago de Compostela</p>
             </section>
             <section>
                 <div>Ubicación de Google Maps</div>
             </section>
             <section>
                 <form>
-                    Formulario de contacto
+                    <h3>Formulario de contacto</h3>
+                    <label>Nombre</label>
+                    <input type="text"/>
+                    <label>Email</label>
+                    <input type="text"/>
+                    <button type="submit">Enviar</button>
                 </form>
             </section>
             <aside>
                 <article>
-                    <img/>
-                    <p>Noticia 1</p>
+                    <img src="img/noticia1.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 1</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 2</p>
+                    <img src="img/noticia2.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 2</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article>
+                    <img src="img/noticia3.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 3</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
             </aside>
         </main>
         <footer>
-            Pie de página
+            <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div>
         </footer>
     </body>
 </html>
