--- a/index.html
+++ b/index.html
@@ -5,25 +5,34 @@
     </head>
     <body>
         <header>
-            Header
+            <img src="img/logo.png" width="150" height="150">
         </header>
         <nav>
-            Navegacion
+            <div><a href="cafeteria.html">Cafetería</a></div>
+            <div><a href="panaderia.html">Panadería</a></div>
+            <div><a href="panaderia.html">Bollería</a></div>
+            <div><a href="panaderia.html">Empanadas</a></div>
+            <div><a href="contacto.html">Contacto</a></div>
         </nav>
         <main>
             <section>
                 <article>
-                    <img/>
-                    <p>Noticia 1</p>
+                    <img src="img/noticia1.jpg" width="628" height="335"/>
+                    <p><h4> Noticia 1</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. </p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 2</p>
+                    <img src="img/noticia2.jpg" width="628" height="335"/>
+                    <p><h4> Noticia 2</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. </p>
+                </article>
+                <article>
+                    <img src="img/noticia3.jpg" width="628" height="335"/>
+                    <p><h4> Noticia 3</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. </p>
                 </article>
             </section>
         </main>
         <footer>
-            Pie de página
+            <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div>
         </footer>
     </body>
 </html>
