--- a/panaderia.html
+++ b/panaderia.html
@@ -5,39 +5,48 @@
     </head>
     <body>
         <header>
-            Header
+            <img src="img/logo.png" width="150" height="150">
         </header>
         <nav>
-            Navegacion
+            <div><a href="cafeteria.html">Cafetería</a></div>
+            <div><a href="panaderia.html">Panadería</a></div>
+            <div><a href="panaderia.html">Bollería</a></div>
+            <div><a href="panaderia.html">Empanadas</a></div>
+            <div><a href="contacto.html">Contacto</a></div>
         </nav>
         <main>
             <section>
                 <artile>
-                    <img/>
-                    <div>Producto 1</div>
+                    <a href="producto.html"><img src="img/barrapan.jpg" width="265" height="210"/></a>
+                    <a href="producto.html"><div>Barra de pan normal</div></a>
                 </artile>
                 <artile>
-                    <img/>
-                    <div>Producto 2</div>
+                    <a href="producto.html"><img src="img/bolapan.jpg" width="265" height="210"/></a>
+                    <a href="producto.html"><div>Bola de pan</div></a>
                 </artile>
                 <artile>
-                    <img/>
-                    <div>Producto 3</div>
+                    <a href="producto.html"><img src="img/bolapan2.jpg" width="265" height="210"/></a>
+                    <a href="producto.html"><div>Bola de pan tierno</div></a>
                 </artile>
             </section>
             <aside>
                 <article>
-                    <img/>
-                    <p>Noticia 1</p>
+                    <img src="img/noticia1.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 1</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 2</p>
+                    <img src="img/noticia2.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 2</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article>
+                    <img src="img/noticia3.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 3</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
             </aside>
         </main>
         <footer>
-            Pie de página
+            <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div>
         </footer>
     </body>
 </html>
