--- a/producto.html
+++ b/producto.html
@@ -5,34 +5,53 @@
     </head>
     <body>
         <header>
-            Header
+            <img src="img/logo.png" width="150" height="150">
         </header>
         <nav>
-            Navegacion
+            <div><a href="cafeteria.html">Cafetería</a></div>
+            <div><a href="panaderia.html">Panadería</a></div>
+            <div><a href="panaderia.html">Bollería</a></div>
+            <div><a href="panaderia.html">Empanadas</a></div>
+            <div><a href="contacto.html">Contacto</a></div>
         </nav>
         <main>
             <section>
-                <img/>
+                <img src="img/barrapan.jpg" width="650" height="380"/>
             </section>
             <section>
-                Ingredientes
+                <h3>Ingredientes</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. 
+                </p>
             </section>
             <section>
-                Preparación
+                <h3>Preparación</h3>
+                <p>
+                    Morbi mauris nisl, tincidunt sit amet nisi vitae, placerat rhoncus dui. Maecenas a sapien aliquet, porttitor purus non, sodales justo. Integer aliquam mollis nulla at ornare. Nulla facilisi. Cras interdum luctus velit, non vehicula est convallis et. Morbi rutrum urna sed egestas vulputate. Integer pretium posuere turpis, quis posuere odio varius non. Integer sed tincidunt risus. Duis a risus id arcu ullamcorper feugiat.
+                </p><p>
+                    In sed elit sed dui accumsan finibus a sit amet ex. Suspendisse aliquet feugiat euismod. Vestibulum dignissim sodales lacus ut venenatis. Praesent lobortis mi non ante tempus fringilla. Mauris lobortis, ex eget eleifend blandit, metus erat fringilla purus, id convallis turpis enim quis dui. Curabitur ut faucibus lacus, sed mattis justo. Proin dapibus ullamcorper turpis sit amet congue. Nulla quis laoreet sem. Maecenas aliquet aliquet tristique. Nullam lectus diam, pretium vitae scelerisque a, laoreet id lacus. Donec ac porttitor nisi. Fusce vel arcu eu nisl aliquam vehicula. Nulla facilisi. Mauris consequat bibendum dignissim. Suspendisse lobortis quam vitae lorem lacinia accumsan.
+                </p><p>   
+                    Nam orci eros, lobortis quis diam id, consequat pharetra urna. Duis interdum imperdiet sapien quis tristique. Maecenas interdum, turpis at bibendum interdum, eros dui placerat eros, at dapibus augue nibh vel arcu. Mauris sodales, felis vitae tristique consequat, enim libero euismod mi, in semper nibh lorem vel tellus. Praesent sit amet felis orci. In lobortis, velit quis elementum lobortis, eros tellus facilisis dui, ac facilisis velit mauris in nunc. Donec sodales bibendum metus non tempus. Curabitur lectus turpis, blandit eu nisl vel, sodales condimentum erat. Praesent at posuere metus. 
+                </p>
             </section>
             <aside>
                 <article>
-                    <img/>
-                    <p>Noticia 1</p>
+                    <img src="img/noticia1.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 1</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 2</p>
+                    <img src="img/noticia2.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 2</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article>
+                    <img src="img/noticia3.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 3</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
             </aside>
         </main>
         <footer>
-            Pie de página
+            <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div>
         </footer>
     </body>
 </html>
