--- a/cafeteria.html
+++ b/cafeteria.html
@@ -5,33 +5,45 @@
     </head>
     <body>
         <header>
-            Header
+            <img src="img/logo.png" width="150" height="150">
         </header>
         <nav>
-            Navegacion
+            <div><a href="cafeteria.html">Cafetería</a></div>
+            <div><a href="panaderia.html">Panadería</a></div>
+            <div><a href="panaderia.html">Bollería</a></div>
+            <div><a href="panaderia.html">Empanadas</a></div>
+            <div><a href="contacto.html">Contacto</a></div>
         </nav>
         <main>
             <section>
-                <img/>
-                <article>Descripción de la cafetería</article>
+                <img src="img/cafeteria.jpg" width="1150" height="650"/>
+                <article><h3>Descripción de la cafetería</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis.
+                    </p>
+                    <p>
+                        Morbi mauris nisl, tincidunt sit amet nisi vitae, placerat rhoncus dui. Maecenas a sapien aliquet, porttitor purus non, sodales justo. Integer aliquam mollis nulla at ornare. Nulla facilisi. Cras interdum luctus velit, non vehicula est convallis et. Morbi rutrum urna sed egestas vulputate. Integer pretium posuere turpis, quis posuere odio varius non. Integer sed tincidunt risus. Duis a risus id arcu ullamcorper feugiat. 
+                    </p>
+                </article>
             </section>
             <aside>
                 <article>
-                    <img/>
-                    <p>Noticia 1</p>
+                    <img src="img/noticia1.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 1</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 2</p>
+                    <img src="img/noticia2.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 2</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
                 <article>
-                    <img/>
-                    <p>Noticia 3</p>
+                    <img src="img/noticia3.jpg" width="250" height="180"/>
+                    <p><h5> Noticia 3</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
             </aside>
         </main>
         <footer>
-            Pie de página
+            <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div>
         </footer>
     </body>
 </html>
