--- a/panaderia.html
+++ b/panaderia.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Esta página serviría como modelo para las páginas de panadería, bollería y empanadas. Si hacemos las páginas en php, se podrían generar dinámicamente. -->
 <html>
     <head>
         <title>Panadería - Migas Amigas</title>
