--- a/producto.html
+++ b/producto.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Este modelo de página serviría para mostrar todos los productos de la tienda. Si hacemos las páginas en php, se podrían generar dinámicamente. -->
 <html>
     <head>
         <title>Producto 1 - Migas Amigas</title>
