--- a/contacto.html
+++ b/contacto.html
@@ -29,31 +29,40 @@
             <section>
                 <form>
                     <h3>Formulario de contacto</h3>
-                    <label>Nombre</label>
-                    <input type="text"/>
-                    <label>Email</label>
-                    <input type="text"/>
-                    <button type="submit">Enviar</button>
-                </form>
+                   <p><label>Nombre</label>
+                    <input type="text"/> </p>
+                    <p><label>Email</label>
+                    <input type="text"/></p>
+                    <textarea name="comentario" id="" cols="30" rows="10"></textarea>
+<!--                     <button type="submit">Enviar</button>
+-->                 <input type="submit" value="Enviar">              
+    </form>
             </section>
             <aside>
                 <article>
-                    <img src="img/noticia1.jpg" width="250" height="180"/>
+                    <!-- <img src="img/noticia1.jpg" width="250" height="180"/> -->
                     <p><h5> Noticia 1</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </article>
                 <article>
-                    <img src="img/noticia2.jpg" width="250" height="180"/>
+                    <!-- <img src="img/noticia2.jpg" width="250" height="180"/> -->
                     <p><h5> Noticia 2</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
                 <article>
-                    <img src="img/noticia3.jpg" width="250" height="180"/>
+                    <!-- <img src="img/noticia3.jpg" width="250" height="180"/> -->
                     <p><h5> Noticia 3</h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </article>
             </aside>
         </main>
         <footer>
-            <div>Columna de pie 1</div>
-            <div>Columna de pie 2</div>
+            <!-- <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div> -->
+            <address>
+                <p>R/ De Rosaliá de Castro, 33</p>
+                <p>32653. Túi</p>
+                <p>Pontevedra</p>
+            </address>
+            <p><a href="tel:+34982343434">Teléfono: 982 34 34 34</a></p>
+            <p><a href="mailto:contacto@migasamigas.com">contacto@migasamigas.com</a></p>
         </footer>
     </body>
 </html>
