--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Home - Migas Amigas</title>
-    </head>
-    <body>
+    </head> 
+te faltan los meta de la cabecera y el idioma, como mínimo de meta debes poner el tipo de caracteres usado 
+-->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Panadería Migas Amigas</title>
+</head>
+<body>
         <header>
-            <img src="img/logo.png" width="150" height="150">
+            <!-- falta el enlace a el mismo ---> 
+            <a href=""><img src="img/logo.png" width="150" height="150"></a>
         </header>
         <nav>
-            <div><a href="cafeteria.html">Cafetería</a></div>
+            <!-- <div><a href="cafeteria.html">Cafetería</a></div>
             <div><a href="panaderia.html">Panadería</a></div>
             <div><a href="panaderia.html">Bollería</a></div>
             <div><a href="panaderia.html">Empanadas</a></div>
-            <div><a href="contacto.html">Contacto</a></div>
+            <div><a href="contacto.html">Contacto</a></div>  
+        esto no se hace con div -->
+        <ul>
+            <li><a href="cafeteria.html">Cafetería</a></li>
+            <li><a href="panaderia.html">Panadería</a></li>
+            <li><a href="bolleria.html">Bollería</a></li>
+            <li><a href="Empanadas.html">Empanadas</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="">ES</a></li>
+                <li><a href="pt/index.html">PT</a></li>
+            </ul>
+            
         </nav>
         <main>
-            <section>
+            <!-- para los enlaces a noticas, al ser publicidad, usamos aside no section
+                 y o aside o article dependiendo de lo que metas dentro-->
+            <aside>
                 <article>
                     <img src="img/noticia1.jpg" width="628" height="335"/>
                     <p><h4> Noticia 1</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. </p>
@@ -28,11 +56,18 @@
                     <img src="img/noticia3.jpg" width="628" height="335"/>
                     <p><h4> Noticia 3</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quam ex, bibendum sed rutrum non, condimentum ac nisl. Nam bibendum dui ut ex molestie luctus. In laoreet, dolor nec efficitur varius, eros massa fringilla nunc, non varius urna mi eu erat. Mauris commodo bibendum faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras cursus interdum justo quis porttitor. Praesent hendrerit eleifend erat at iaculis. </p>
                 </article>
-            </section>
+            </aside>
         </main>
         <footer>
-            <div>Columna de pie 1</div>
-            <div>Columna de pie 2</div>
+            <!-- <div>Columna de pie 1</div>
+            <div>Columna de pie 2</div> -->
+            <address>
+                <p>R/ De Rosaliá de Castro, 33</p>
+                <p>32653. Túi</p>
+                <p>Pontevedra</p>
+            </address>
+            <p><a href="tel:+34982343434">Teléfono: 982 34 34 34</a></p>
+            <p><a href="mailto:contacto@migasamigas.com">contacto@migasamigas.com</a></p>
         </footer>
     </body>
 </html>
